# CoinYan

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml
.claude/: settings.json
.playwright-mcp/: page-2026-05-16T16-10-09-673Z.yml  page-2026-05-16T16-11-08-891Z.yml  page-2026-05-16T16-12-06-573Z.yml  page-2026-05-16T16-13-43-475Z.yml  page-2026-05-16T16-14-45-434Z.yml  page-2026-05-16T16-42-12-452Z.yml  page-2026-05-16T16-43-04-276Z.yml  page-2026-05-16T16-44-35-530Z.yml  page-2026-05-16T16-46-12-970Z.yml  page-2026-05-16T16-46-38-418Z.yml  page-2026-05-16T16-46-47-812Z.yml  page-2026-05-16T16-46-54-055Z.yml  page-2026-05-16T16-46-58-001Z.yml  page-2026-05-16T16-47-04-976Z.yml  page-2026-05-16T16-47-23-761Z.yml  page-2026-05-16T16-47-49-234Z.yml  page-2026-05-16T16-47-56-690Z.yml  page-2026-05-16T16-48-19-668Z.yml  page-2026-05-16T16-48-53-022Z.yml  page-2026-05-16T20-39-34-281Z.yml  page-2026-05-16T20-40-21-860Z.yml  page-2026-05-16T20-41-01-196Z.yml  page-2026-05-16T20-41-10-213Z.yml  page-2026-05-16T20-41-30-404Z.yml  page-2026-05-16T20-45-27-594Z.yml  page-2026-05-16T20-45-50-981Z.yml  page-2026-05-16T20-46-04-555Z.yml  page-2026-05-17T02-01-53-843Z.yml  page-2026-05-17T02-01-58-702Z.yml  page-2026-05-17T02-02-07-586Z.yml  page-2026-05-17T02-02-22-645Z.yml  page-2026-05-17T02-02-38-254Z.yml  page-2026-05-17T02-02-50-705Z.yml  page-2026-05-17T02-02-57-212Z.yml  (+95 more)
frontend/: Dockerfile  (+5 more)
services/budgets-service/: Dockerfile  alembic.ini  pyproject.toml
services/budgets-service/.claude/: CLAUDE.md
services/budgets-service/alembic/versions/: 2026-05-21_create_budget_limit.py
services/budgets-service/app/: config.py  main.py
services/budgets-service/app/core/: dependencies.py
services/budgets-service/app/models/: __init__.py  budget_limit.py
services/budgets-service/app/repositories/: budget_limit_repository.py
services/budgets-service/app/routers/: budget_limits.py  health.py
services/budgets-service/app/schemas/: budget_limit.py
services/rates-service/: Dockerfile  pyproject.toml
services/rates-service/.claude/: CLAUDE.md
services/rates-service/app/: config.py  main.py
services/rates-service/app/routers/: rates.py
services/rates-service/app/services/: rate_cache.py  rate_fetcher.py
services/rates-service/tests/: test_cache.py
services/web-bff/: .env.example  Dockerfile  pyproject.toml
services/web-bff/.claude/: CLAUDE.md
services/web-bff/app/: config.py  main.py  schema.py
services/web-bff/app/routers/: health.py
(+277 files in other folders)
